Redesigned home page

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,1 +1,20 @@
 /* css styles */
+.interests-education {
+  font-size: 0.75em; 
+}
+
+.university {
+  font-size: 0.8em; 
+}
+
+.degree {
+  font-size: 0.8em; 
+}
+
+.exams {
+  font-size: 0.75em; 
+}
+
+.specialization {
+  font-size: 0.75em; 
+}
