--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,20 @@
 /* css styles */
 .interests-education {
-  font-size: 0.75em; 
+  font-size: 0.75rem; 
 }
 
 .university {
-  font-size: 0.8em; 
+  font-size: 0.8rem; 
 }
 
 .degree {
-  font-size: 1.5em; 
+  font-size: 1.5rem; 
 }
 
 .exams {
-  font-size: 0.75em; 
+  font-size: 0.75rem; 
 }
 
 .specialization {
-  font-size: 0.75em; 
+  font-size: 0.75rem; 
 }
